# CollabR18X

./: .dockerignore  .gitignore  CNAME  Dockerfile.python  FIX_ESBUILD_WINDOWS.md  MIGRATION_SUMMARY.md  Makefile  QUICK_START.md  README.md  README_BUILD.md  README_PYTHON.md  RENDER_DEPLOY.md  SETUP_PYTHON.md  TROUBLESHOOTING.md  alembic.ini  build.py  check_servers.ps1  design_guidelines.md  dev.py  docker-compose.python.yml  fix_esbuild.ps1  fix_esbuild_binaries.ps1  index.html  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  render.yaml  replit.md  requirements.txt  run.py  setup.py  start_backend.py  vite.config.ts
.github/workflows/: static.yml
alembic/: env.py
app/: __init__.py  config.py  database.py  main.py
app/middleware/: auth.py
app/models/: __init__.py  auth.py  collaboration.py  community.py  connections.py  matching.py  moderation.py  profile.py  support.py  vault.py
app/routes/: __init__.py  auth.py  collaboration.py  community.py  connections.py  matching.py  moderation.py  profiles.py  statistics.py  support.py  vault.py
app/services/: auth_service.py  profile_service.py  storage_service.py
attached_assets/: Pasted-CollabR18x-Terms-of-Service-Rules-Usage-Last-updated-In_1768391334268.txt
client/: index.html  requirements.md
client/src/: App.tsx  index.css
client/src/components/: CollabRequestModal.tsx  ConsentDialog.tsx  CookieConsent.tsx  FakeCall.tsx  Navbar.tsx  PublicNavbar.tsx  RouteErrorDisplay.tsx
client/src/contexts/: LanguageContext.tsx
client/src/hooks/: use-auth.ts  use-blocks.ts  use-collaborations.ts  use-profiles.ts  (+1 more)
server/: index.ts  routes.ts  storage.ts
shared/: routes.ts  schema.ts
(+37 files in other folders)
